k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-python-app
spec:
  rules:
  - host: app.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: idp-python-app
            port:
              number: 5000
